# AI-Co-Director

./: .gitignore  QUICKSTART.md  README.md
backend/multimodal-emotion-backend/: .gitignore  Dockerfile  README.md  main.py  model_wrapper.py  openai_client.py  requirements.txt  video_utils.py
backend/script-writer-api/: .gitignore  Dockerfile  README.md  api.py  pyproject.toml  requirements.txt  script.md  space.yml
backend/script-writer-api/src/script_writer/: crew.py  main.py
backend/script-writer-api/src/script_writer/config/: agents.yaml  tasks.yaml
frontend/: package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/: Navbar.js
frontend/src/pages/: Home.js  Landing.js  Login.js  ScriptTransformer.jsx  Signup.js  VideoAnalyzer.jsx
