[project]
name = "script_writer"
version = "0.1.0"
description = "script_writer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.193.2,<1.0.0"
]

[project.scripts]
script_writer = "script_writer.main:run"
run_crew = "script_writer.main:run"
train = "script_writer.main:train"
replay = "script_writer.main:replay"
test = "script_writer.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
